--- a/views/partials/verein.ejs
+++ b/views/partials/verein.ejs
@@ -1,7 +1,10 @@
 <div class="verein-wrapper">
     <div class="verein-content">
         <h1 data-aos="zoom-out" data-aos-delay="100" class="aos-init aos-animate vereinsname">
-            Boyz-n-the-Hood</h1>
+                BOYZ <span class="vereinsname-middle">n-the</span> HOOD
+            <br>
+                <!-- BOYZ-N-THE-HOOD -->
+        </h1>
         <h2>Freunde für's Leben</h2>
         <h4>Gegründet 28.2.2017</h4>
         <p> <span class="bold">§1</span><br>
@@ -15,7 +18,7 @@
             </a>
             <a href="/mitglieder/Lorenz">
                 <div class="button">
-                    Satzung 
+                    Satzung
                 </div>
             </a>
         </div>
