--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,25 +1,24 @@
 <%- include("partials/header") %>
 
-<div class="hero">
-    <h1 data-aos="zoom-out" data-aos-delay="300" class="aos-init aos-animate vereinsname">Boyz<br> n-the <br> Hood</h1>
-    <!-- <div class="logo-container">
-        <img src="images/logo-bw.png" height="auto" width="50%">
-    </div> -->
-</div>
-<section id="section-Verein">
 
-    <%- include("partials/verein") %>
-
+<section id="section-hero">
+    <%- include("partials/hero") %>
 </section>
+
+
+<section id="section-Verein">
+    <%- include("partials/verein") %>
+</section>
+
 
 <section id="section-Mitglieder">
-
     <%- include("partials/members") %>
-
 </section>
+
 
 <section id="section-Reisen">
     <%- include("partials/reisen") %>
 </section>
+
 
 <%- include("partials/footer") %>
