--- a/views/partials/reisen.ejs
+++ b/views/partials/reisen.ejs
@@ -1,5 +1,5 @@
-<div class="push-right">
-    <h1 class="vereinsname push-right">Unsere<br> Reisen</h1>
+<div class="container-header">
+    <h1 class="vereinsname">Unsere<br> Reisen</h1>
 
 </div>
 <div class="container-Reisen">
