--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,6 +30,7 @@ body.offcanvas-menu:before {
 p {
 	color: #b3b3b3;
 	font-weight: 300;
+	text-decoration: none;
 }
 
 h1,
@@ -91,11 +92,21 @@ a:hover {
 
 .hero {
 	height: 100vh;
-	width: auto;
+	width: 100%;
+	position: relative;
+}
+
+.hero:before {
+	content: ' ';
+	display: block;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-image: url('/images/home.jpg');
+	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
-	background-repeat: no-repeat;
-	background-image: url('/images/home.jpg');
 }
 
 .logo-container {
@@ -132,14 +143,6 @@ header {
 .vereinsname-middle {
 	font-size: 2rem;
 	text-shadow: 2.5px 2.5px 4px rgba(15, 98, 146, 0.65);
-}
-
-.push-right {
-	display: flex;
-	justify-content: right;
-	text-align: right !important;
-	margin-left: 0px !important;
-	margin-right: 3rem;
 }
 
 /* header .navbar-brand.absolute {
@@ -329,12 +332,12 @@ header .navbar .cta-btn a:hover {
 	}
 }
 
-@media (max-width: 991.98px) {
+/* @media (max-width: 991.98px) {
 
 	.hero {
 		height: 70vh;
 	}
-}
+} */
 
 @media (min-width: 992px) {
 	#mainNav {
