--- a/views/partials/verein.ejs
+++ b/views/partials/verein.ejs
@@ -9,12 +9,12 @@
             Dieser Verein dient dem Zweck der Erhaltung der Freundschaft, Freiheit und Brüderlichkeit sowie dem Gelingen
             einer jährlichen Unternehmung der Mitglieder. </p>
         <div class="buttons-wrapper">
-            <a href="/mitglieder/Lorenz">
+            <a href="/">
                 <div class="button">
                     Gründung
                 </div>
             </a>
-            <a href="/mitglieder/Lorenz">
+            <a href="/">
                 <div class="button">
                     Satzung
                 </div>
