--- a/public/css/footer-styles.css
+++ b/public/css/footer-styles.css
@@ -84,6 +84,9 @@
      color: rgb(241, 223, 21);
      text-shadow: 4px 4px 6px rgba(20, 50, 67, 0.887);
      transform: scale(1.01);
+	-webkit-transition: .3s all ease;
+	-o-transition: .3s all ease;
+	transition: .3s all ease;
 }
 
  .footer-social-small {
@@ -138,6 +141,9 @@
  .social-media-symbol:hover svg {
      filter: drop-shadow(3px 5px 2px rgba(20, 50, 67, 0.887));
      transform: scale(1.1);
+	-webkit-transition: .3s all ease;
+	-o-transition: .3s all ease;
+	transition: .3s all ease;
  }
 
  @media only screen and (max-width: 768px) {
