--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -48,7 +48,11 @@ h6,
 	font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-a {
+a,
+a:hover {
+	color: #0F6292;
+	text-decoration: none !important;
+	/* Smooth transition for anchor tag hover stuff  */
 	-webkit-transition: .3s all ease;
 	-o-transition: .3s all ease;
 	transition: .3s all ease;
@@ -82,38 +86,6 @@ header .navbar-nav {
 .navbar-toggler-item {
 	color: rgb(255, 237, 0);
 	/* ToDo does not work! */
-}
-
-a,
-a:hover {
-	color: #0F6292;
-	text-decoration: none !important;
-}
-
-.hero {
-	height: 100vh;
-	width: 100%;
-	position: relative;
-}
-
-.hero:before {
-	content: ' ';
-	display: block;
-	position: absolute;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	background-image: url('/images/home.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center center;
-}
-
-.logo-container {
-	display: block;
-	margin-left: 70%;
-	overflow: hidden;
-	filter: invert(100%);
 }
 
 /* Header */
