--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -19,15 +19,15 @@
     <li><a href="" class="generic-anchor footer-list-anchor">Sebastian Ghanbari</a></li>
   </ul>
   <ul class="footer-list-top">
-    <li id="help">
+    <li>
       <h4 class="footer-list-header">Reisen</h4>
     </li>
-    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">Nizza 2017</a></li>
-    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">Dublin 2018</a></li>
-    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">Albanien 2019</a></li>
-    <li><a href="" class="generic-anchor footer-list-anchor" itemprop="significantLink">Schweiz/Italien 2020</a></li>
-    <li><a href="" itemprop="significantLink" class="generic-anchor footer-list-anchor">Kroatien 2021</a></li>
-    <li><a href="" itemprop="significantLink" class="generic-anchor footer-list-anchor">Kitzbühl 2022</a></li>
+    <li><a href="" class="generic-anchor footer-list-anchor">Nizza 2017</a></li>
+    <li><a href="" class="generic-anchor footer-list-anchor">Dublin 2018</a></li>
+    <li><a href="" class="generic-anchor footer-list-anchor">Albanien 2019</a></li>
+    <li><a href="" class="generic-anchor footer-list-anchor">Schweiz/Italien 2020</a></li>
+    <li><a href="" class="generic-anchor footer-list-anchor">Kroatien 2021</a></li>
+    <li><a href="" class="generic-anchor footer-list-anchor">Kitzbühl 2022</a></li>
   </ul>
   <section class="footer-social-section flex-rw">
     <a href="/">
