--- a/public/css/hero-styles.css
+++ b/public/css/hero-styles.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: GaboFont;
+    src: url("../gabo_font.otf") format("opentype");
+}
+
+
 .hero {
     display: flex;
     height: 100vh;
@@ -5,6 +11,7 @@
     justify-content: center;
 }
 
+.hero:after,
 .hero:before {
     content: ' ';
     display: block;
@@ -12,28 +19,41 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/images/home.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center 30%;
+    background-position: center center;
+}
+
+.hero:after {
+    background-image: url('/images/home.jpg');
+}
+
+.hero:before {
+    background-image: url('/images/home-front.png');
+    z-index: 3;
 }
 
 #section-hero .vereinsname {
-	font-size: calc(1rem + 6vw);
+    font-family: GaboFont;
+    font-weight: 1000;
+    letter-spacing: 1px;
+    line-height: 20%;
+    font-size: calc(2rem + 10vw);
     margin: 0;
-    margin-top:2%;
-	display: flex;
-	align-items: center;
-	gap: 100px;
+    margin-top: 15%;
+    display: flex;
+    align-items: center;
+    gap: calc(10px + 2vw);
+    transform: scale(1.4, 2);
 }
 
 #section-hero .vereinsname-middle {
-	font-size: calc(1rem + 3vw);
+    font-size: calc(1rem + 3vw);
 }
 
 .logo-container {
-	display: block;
-	margin-left: 30%;
-	overflow: hidden;
-	filter: invert(100%);
+    display: block;
+    margin-left: 30%;
+    overflow: hidden;
+    filter: invert(100%);
 }
