Play around with hero animation

--- a/views/partials/hero.ejs
+++ b/views/partials/hero.ejs
@@ -1,8 +1,11 @@
 <div class="hero">
-    <h1 data-aos="zoom-out" data-aos-delay="100" class="aos-init aos-animate vereinsname">
+    <!-- <div class="shadows">
+        <span>s</span><span>h</span><span>a</span><span>d</span><span>o</span><span>w</span><span>s</span>
+    </div> -->
+    <h1 class="vereinsname">
         BOYZ <span class="vereinsname-middle">n-the</span> HOOD
     </h1>
     <!-- <div class="logo-container">
-        <img src="images/logo-bw.png" height="auto" width="80%">
-    </div> -->
+      <img src="images/logo-bw.png" height="auto" width="80%">
+  </div> -->
 </div>
