--- a/public/css/hero-styles.css
+++ b/public/css/hero-styles.css
@@ -1,3 +1,10 @@
+:root {
+  --primary-color: #6CD9CE;
+  --secondary-color: #D93BA1;
+  --complimentary-color: #2E2473;
+}
+
+
 @font-face {
     font-family: GaboFont;
     src: url("../gabo_font.otf") format("opentype");
@@ -44,7 +51,13 @@
     display: flex;
     align-items: center;
     gap: calc(10px + 2vw);
-    transform: scale(1.4, 2);
+    animation: 1.2s slideIn ease-in-out forwards 0.01s;
+    transform: translateY(-600px);
+
+    /* text-shadow: -15px 5px 20px #1764d8;
+    letter-spacing: -0.05em;
+    font-family: 'Anton', Arial, sans-serif;
+    transition: all 0.25s ease-out; */
 }
 
 #section-hero .vereinsname-middle {
@@ -56,4 +69,51 @@
     margin-left: 30%;
     overflow: hidden;
     filter: invert(100%);
+}
+
+.shadows {
+    position: relative;
+    text-transform: uppercase;
+    text-shadow: -15px 5px 20px #ced0d3;
+    color: white;
+    letter-spacing: -0.05em;
+    font-family: 'Anton', Arial, sans-serif;
+    user-select: none;
+    font-size: 150px;
+    transition: all 0.25s ease-out;
+    z-index: 3;
+}
+
+.vereinsname:hover {
+    text-shadow: -16px 6px 15px black;
+    z-index: 3;
+}
+
+@keyframes slideIn {
+  100% {
+    transform: translateY(0px);
+    transform: scale(1.4, 2);
+    opacity: 1;
+  }
+}
+
+@keyframes underline {
+  100% {
+    width: 60%;
+  }
+}
+
+#section-hero .vereinsname:before {
+    content: '';
+    width: 0%;
+    height: 34%;
+    background-color: var(--secondary-color);
+    position: absolute;
+    bottom: 34%;
+    left: 20%;
+    animation: 1s underline ease-in-out both 1.1s;
+    mix-blend-mode: hue;
+    z-index: 1000;  
+    transform: scale(1.4, 2);
+    opacity: 0.5;
 }
