--- a/public/css/footer-styles.css
+++ b/public/css/footer-styles.css
@@ -7,7 +7,7 @@
  } */
 
  .generic-anchor:hover {
-     color: rgb(241, 223, 21);
+     color: var(--primary-color);
      padding-left: 5px;
      text-shadow: 4px 4px 6px rgba(20, 50, 67, 0.887);
  }
@@ -19,7 +19,7 @@
 
  footer {
      z-index: 10;
-     background: rgb(9, 72, 109);
+     background: var(--background-blue);
      margin-top: auto;
      width: 100%;
  }
@@ -68,7 +68,7 @@
  .footer-social-overlap {
      position: relative;
      z-index: 2;
-     background: rgb(9, 72, 109);
+     background: var(--background-blue);
      padding: 0 20px;
  }
 
@@ -81,7 +81,7 @@
  }
 
 .footer-social-connect:hover {
-     color: rgb(241, 223, 21);
+     color: var(--primary-color);
      text-shadow: 4px 4px 6px rgba(20, 50, 67, 0.887);
      transform: scale(1.01);
 	-webkit-transition: .3s all ease;
