--- a/public/css/hero-styles.css
+++ b/public/css/hero-styles.css
@@ -11,6 +11,7 @@
     justify-content: center;
 }
 
+
 .hero:after,
 .hero:before {
     content: ' ';
@@ -38,62 +39,41 @@
     font-weight: 1000;
     letter-spacing: 1px;
     line-height: 20%;
-    font-size: calc(2rem + 10vw);
+    font-size: calc(1.0rem + 10vw);
     margin: 0;
-    margin-top: 15%;
+    margin-top: calc(5% + 20vh);
     display: flex;
     align-items: center;
-    gap: calc(10px + 2vw);
+    gap: calc(10px + 1.5vw);
     animation: 1.2s slideIn ease-in-out forwards 0.01s;
     transform: translateY(-600px);
-
-    /* text-shadow: -15px 5px 20px #1764d8;
-    letter-spacing: -0.05em;
-    font-family: 'Anton', Arial, sans-serif;
-    transition: all 0.25s ease-out; */
 }
 
 #section-hero .vereinsname-middle {
     font-size: calc(1rem + 3vw);
 }
 
-.logo-container {
-    display: block;
-    margin-left: 30%;
-    overflow: hidden;
-    filter: invert(100%);
+#section-hero .vereinsname.small {
+    display: none;
 }
 
-/* .shadows {
-    position: relative;
-    text-transform: uppercase;
-    text-shadow: -15px 5px 20px #ced0d3;
-    color: white;
-    letter-spacing: -0.05em;
-    font-family: 'Anton', Arial, sans-serif;
-    user-select: none;
-    font-size: 150px;
-    transition: all 0.25s ease-out;
-    z-index: 3;
-}
+#section-hero .vereinsname.small .front {
+    z-index: 10;
 
-.vereinsname:hover {
-    text-shadow: -16px 6px 15px black;
-    z-index: 3;
-} */
+}
 
 @keyframes slideIn {
-  100% {
-    transform: translateY(0px);
-    transform: scale(1.4, 2);
-    opacity: 1;
-  }
+    100% {
+        transform: translateY(0px);
+        transform: scale(1.4, 2);
+        opacity: 1;
+    }
 }
 
 @keyframes underline {
-  100% {
-    width: 60%;
-  }
+    100% {
+        width: 60%;
+    }
 }
 
 #section-hero .vereinsname:before {
@@ -104,9 +84,68 @@
     position: absolute;
     bottom: 34%;
     left: 20%;
+    /* TODO: Linien Animation die sich wiederholt */
+    animation: 1s underline ease-in-out both infinite;
     animation: 1s underline ease-in-out both 1.1s;
     mix-blend-mode: hue;
-    z-index: 1000;  
+    z-index: 1000;
     transform: scale(1.4, 2);
-    opacity: 0.5;
+    opacity: 0.6;
+}
+
+
+@media screen and (max-width: 723px) {
+    #section-hero .vereinsname.large {
+        display: none
+    }
+
+    #section-hero .vereinsname.small {
+        display: flex;
+        flex-direction: column;
+        gap: 8vh;
+        margin-top: 22vh;
+        font-size: calc(1.0rem + 10vh);
+    }
+
+    #section-hero .vereinsname-middle {
+        font-size: calc(1rem + 3vh);
+    }
+
+    #section-hero .vereinsname.small.front {
+        margin-top: 66vh;
+        z-index: 4;
+        transform: translateY(600px);
+    }
+
+    #section-hero .vereinsname:before {
+        height: calc(0.3rem + 3vh);
+    }
+
+    #section-hero .vereinsname.back:before {
+        bottom: 66%;
+    }
+}
+
+@keyframes animatedBackground {
+    0% {
+        background-position: -500px center;
+    }
+
+    50% {
+        background-position: -100px center;
+    }
+
+    100% {
+        background-position: -500px center;
+    }
+}
+
+@media (max-aspect-ratio: 2/3) {
+
+    .hero:after,
+    .hero:before {
+        animation: animatedBackground 30s linear infinite;
+
+    }
+
 }
