--- a/views/partials/hero.ejs
+++ b/views/partials/hero.ejs
@@ -2,9 +2,16 @@
     <!-- <div class="shadows">
         <span>s</span><span>h</span><span>a</span><span>d</span><span>o</span><span>w</span><span>s</span>
     </div> -->
-    <h1 class="vereinsname">
+    <h1 class="vereinsname large">
         BOYZ <span class="vereinsname-middle">n-the</span> HOOD
     </h1>
+    <h1 class="vereinsname small back">
+        BOYZ <span class="vereinsname-middle">n-the</span> 
+    </h1>
+    <h1 class="vereinsname small front">
+        HOOD 
+    </h1>
+
     <!-- <div class="logo-container">
       <img src="images/logo-bw.png" height="auto" width="80%">
   </div> -->
