--- a/public/css/hero-styles.css
+++ b/public/css/hero-styles.css
@@ -47,6 +47,17 @@
     gap: calc(10px + 1.5vw);
     animation: 1.2s slideIn ease-in-out forwards 0.01s;
     transform: translateY(-600px);
+    /* animation: glow 3s ease-in-out infinite alternate; */
+    animation-name:
+        slideIn, glow;
+    animation-duration:
+        1.2s, 6s;
+    animation-timing-function:
+        ease-in-out, ease-in-out;
+    animation-iteration-count:
+        1, infinite;
+    animation-direction: forwards, alternate;
+
 }
 
 #section-hero .vereinsname-middle {
@@ -70,9 +81,29 @@
     }
 }
 
-@keyframes underline {
+@keyframes slideIn {
     100% {
+        transform: translateY(0px);
+        transform: scale(1.4, 2);
+        opacity: 1;
+    }
+}
+
+@keyframes underline {
+    5% {
+        width: 0%;
+    }
+
+    35% {
         width: 60%;
+    }
+
+    65% {
+        width: 60%;
+    }
+
+    95% {
+        width: 0%;
     }
 }
 
@@ -84,9 +115,9 @@
     position: absolute;
     bottom: 34%;
     left: 20%;
-    /* TODO: Linien Animation die sich wiederholt */
-    animation: 1s underline ease-in-out both infinite;
-    animation: 1s underline ease-in-out both 1.1s;
+    /* animation: 1s underline ease-in-out both 1.1s; */
+    /* TODO Alternate Animation Backwards and forward for mobile screen */
+    animation: 6s underline ease-in-out both infinite ;
     mix-blend-mode: hue;
     z-index: 1000;
     transform: scale(1.4, 2);
@@ -123,6 +154,7 @@
 
     #section-hero .vereinsname.back:before {
         bottom: 66%;
+        animation-delay: 3s ;
     }
 }
 
@@ -144,8 +176,21 @@
 
     .hero:after,
     .hero:before {
-            animation: animatedBackground 30s linear infinite;
+        animation: animatedBackground 30s linear infinite;
 
     }
 
+}
+
+@keyframes glow {
+    0% {
+        text-shadow: 4px 4px 6px rgba(15, 98, 146, 0.65);
+    }
+
+    50% {
+        text-shadow: 1px 1px 25px rgba(52, 165, 230, 0.866);
+    }
+    100% {
+        text-shadow: 4px 4px 6px rgba(15, 98, 146, 0.65);
+    }
 }
