--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -56,84 +56,18 @@ h6,
 	font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-a,
-a:hover {
-	color: var(--complimentary-color);
-	text-decoration: none !important;
-	/* Smooth transition for anchor tag hover stuff  */
-	-webkit-transition: .3s all ease;
-	-o-transition: .3s all ease;
-	transition: .3s all ease;
-}
-
-ul {
-	list-style: none;
-}
-
-.bold {
+h2 {
+	font-size: calc(1.5rem + .9vw);
 	font-weight: 600;
 }
 
-.vereinsname {
-	position: absolute;
-	float: left;
-    color: var(--primary-color);
-}
-
-
-body {
-	font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-	background-color: #fff;
-	height: auto;
-	position: relative;
-}
-
-body:before {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background: rgba(0, 0, 0, 0.5);
-	-webkit-transition: .3s all ease;
-	-o-transition: .3s all ease;
-	transition: .3s all ease;
-	opacity: 0;
-	visibility: hidden;
-	z-index: 1;
-}
-
-body.offcanvas-menu:before {
-	opacity: 1;
-	z-index: 1002;
-	visibility: visible;
-}
-
-p {
-	color: #b3b3b3;
-	font-weight: 300;
-	text-decoration: none;
-}
-
-h1,
-h2,
-h4,
-h5,
-h3,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
-	font-family: "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+h5 {
+	font-size: calc(1rem + .5vw);
 }
 
 a,
 a:hover {
-	color: var(--complimentary-color); 
+	color: var(--complimentary-color);
 	text-decoration: none !important;
 	/* Smooth transition for anchor tag hover stuff  */
 	-webkit-transition: .3s all ease;
@@ -170,12 +104,12 @@ ul {
 
 .button {
 	text-transform: uppercase;
-	letter-spacing: 1px;
+	letter-spacing: 0.5px;
 	font-weight: 600;
 	cursor: pointer;
 	height: 3rem;
 	line-height: 2.9rem;
-	width: 150px;
+	width: calc(100px + 3vw);
 	background-color: transparent;
 	border-radius: 4px;
 	text-align: center;
@@ -185,6 +119,7 @@ ul {
 	text-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
 	color: rgb(15, 98, 146);
 	border: solid 2px rgb(15, 98, 146);
+	font-size: calc(0.8rem + 0.2vw);
 }
 
 .button:hover {
@@ -194,7 +129,7 @@ ul {
 	border: solid 2px rgb(15, 98, 146);
     color: var(--primary-color);
 	font-weight: 900;
-	font-size: 17px;
+	font-size: calc(0.85rem + 0.22vw);
 }
 
 @media (max-width: 991.98px) {
