--- a/public/css/verein-styles.css
+++ b/public/css/verein-styles.css
@@ -1,5 +1,5 @@
 #section-Verein p {
-	color: #0F6292;
+	color: var(--complimentary-color);
 	font-size: calc(0.5rem + 0.8vw);
 	padding: 0px 30px;
 	text-align: center;
@@ -22,41 +22,51 @@
 }
 
 .verein-content {
-	margin-top: 2rem;
+	/* margin-top: 2rem; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	height: auto;
 	/* min-height: 500px; */
 	justify-content: space-evenly;
+	z-index: 2;
 }
 
 .verein-content .vereinsname {
+    font-family: GaboFont;
+	letter-spacing: 1px;
+	font-weight: 400;
+	font-size: calc(2rem + 7vw);
+	text-shadow: 2px 2px 3px rgba(15, 98, 146, 0.65);
 	position: static;
 	margin: 0rem;
 	margin-top: 2rem;
 	padding: 1rem 0rem;
 }
+.verein-content .vereinsname-middle {
+    font-size: calc(1.5rem + 1.5vw);
+	text-shadow: 2px 2px 3px rgba(15, 98, 146, 0.65);
+}
+
 .verein-wrapper {
 	display: grid;
-	grid-template-rows: 100vh;
+	grid-template-rows: auto;
+	min-height: 100vh;
 	grid-template-columns: 2fr 1fr;
 	overflow: hidden;
 	position: relative;
-	background-color: rgba(255, 255, 0, 0.1);
+	background-color: rgb(252, 252, 217);
 }
-.verein-wrapper::before {
+.verein-wrapper::after {
 	content: ' ';
 	display: block;
 	position: absolute;
-	left: 60%;
-	top: 0;
 	width: 100%;
-	height: 100%;
+	height: 150%;
 	opacity: 0.3;
 	background-image: url('/images/logo-bw.png');
 	background-repeat: no-repeat;
-	background-position: 50% 0;
+	background-position: calc(200px + 40vw) 0; 
 	background-size: cover;
 }
 
@@ -81,4 +91,5 @@
 	opacity: 0.3;
 	z-index: 100;
 }
+
 
