--- a/public/css/verein-styles.css
+++ b/public/css/verein-styles.css
@@ -1,6 +1,6 @@
 #section-Verein p {
 	color: var(--complimentary-color);
-	font-size: calc(0.5rem + 0.8vw);
+	font-size: calc(0.5rem + 1vw);
 	padding: 0px 30px;
 	text-align: center;
 	max-width: calc(200px + 10vw + 10vh);
@@ -16,6 +16,7 @@
 	align-items: center;
 	gap: 20px;
 }
+
 .buttons-wrapper {
 	display: flex;
 	gap: 5rem;
@@ -33,18 +34,19 @@
 }
 
 .verein-content .vereinsname {
-    font-family: GaboFont;
+	font-family: GaboFont;
 	letter-spacing: 1px;
 	font-weight: 400;
-	font-size: calc(2rem + 7vw);
+	font-size: calc(2.5rem + 7vw);
 	text-shadow: 2px 2px 3px rgba(15, 98, 146, 0.65);
 	position: static;
 	margin: 0rem;
 	margin-top: 2rem;
-	padding: 1rem 0rem;
+	padding: 1rem 0.5rem;
 }
+
 .verein-content .vereinsname-middle {
-    font-size: calc(1.5rem + 1.5vw);
+	font-size: calc(1.2rem + 1.55vw);
 	text-shadow: 2px 2px 3px rgba(15, 98, 146, 0.65);
 }
 
@@ -57,6 +59,7 @@
 	position: relative;
 	background-color: rgb(252, 252, 217);
 }
+
 .verein-wrapper::after {
 	content: ' ';
 	display: block;
@@ -66,7 +69,7 @@
 	opacity: 0.3;
 	background-image: url('/images/logo-bw.png');
 	background-repeat: no-repeat;
-	background-position: calc(200px + 40vw) 0; 
+	background-position: calc(200px + 40vw) 0;
 	background-size: cover;
 }
 
@@ -81,15 +84,61 @@
 	/* grid-column: 1/3; */
 }
 
-.logo-background {
-	position: relative;
-	object-fit: cover;
-	background-image: url('/images/logo-bw.png');
-	background-size: calc(180% - 20vw) auto;
-	background-repeat: no-repeat;
-	background-position: 150px 0px;
-	opacity: 0.3;
-	z-index: 100;
+
+@media screen and (max-width: 900px) {
+
+	.verein-wrapper {
+		grid-template-columns: 2.8fr 1fr;
+	}
 }
 
 
+@media screen and (max-width: 723px) {
+
+	.verein-wrapper {
+		grid-template-columns: 1fr;
+	}
+
+	.verein-content .vereinsname {
+		font-size: calc(2rem + 7vw);
+	}
+
+	.verein-content .vereinsname-middle {
+		font-size: calc(1rem + 1.55vw);
+	}
+
+	.verein-wrapper {
+		min-height: auto;
+	}
+
+	.verein-wrapper::after {
+
+		background-position: 20vw 10vh;
+		opacity: 0.05;
+	}
+
+	.button {
+		background-color: rgb(252, 252, 217);
+	}
+
+	#section-Verein p {
+		font-size: calc(0.7rem + 0.8vw);
+	}
+
+	.buttons-wrapper {
+		display: flex;
+		gap: 2.5rem;
+	}
+}
+
+@media (max-aspect-ratio: 3/2) {
+	.verein-wrapper {
+		min-height: auto;
+	}
+
+	.verein-content {
+		margin-top: 1rem;
+		margin-bottom: 0.5rem;
+		gap: 5px;
+	}
+}
