Responsive Mitglieder Namen and Titel

--- a/views/partials/members.ejs
+++ b/views/partials/members.ejs
@@ -111,16 +111,17 @@
                         <div class="card">
                             <div class="side front">
                                 <div class="carousel__box">
-                                    <div class="carousel__image"><img src="images/Jakob.jpg" width="480" height="720">
+                                    <div class="carousel__image">
+                                        <img class="img-Jakob" src="images/Jakob.jpg" width="480" height="720">
                                     </div>
                                     <div class="carousel__contents">
-                                        <h2 class="mitglieder__name">Jakob Timmerman</h2>
+                                        <h2 class="mitglieder__name">Jakob Timmermann</h2>
                                         <h3 class="mitglieder__titel">Protokollant und Universalgenie</h3>
                                     </div>
                                 </div>
                             </div>
                             <div class="side back">
-                                <h2 class="mitglieder__name">Jakob Timmerman</h2>
+                                <h2 class="mitglieder__name">Jakob Timmermann</h2>
                                 <h3 class="mitglieder__titel">Protokollant und Universalgenie</h3>
                                 <p class="mitglieder__zitat">"Der nasse Hase ist das geölte Kalb der Tiere."</p>
                                 <p class="mitglieder__bio">
@@ -144,7 +145,8 @@
                         <div class="card">
                             <div class="side front">
                                 <div class="carousel__box">
-                                    <div class="carousel__image"><img src="images/Basti.jpg" width="480" height="720">
+                                    <div class="carousel__image">
+                                        <img class="img-Basti" src="images/Basti.jpg" width="480" height="720">
                                     </div>
                                     <div class="carousel__contents">
                                         <h2 class="mitglieder__name">Sebastian Ghanbari</h2>
