--- a/public/css/mitglieder-styles.css
+++ b/public/css/mitglieder-styles.css
@@ -1,6 +1,8 @@
 :root {
     --height: calc(80vh - 20px);
     --width: 28vw;
+    --height-mobile: 60vh;
+    --width-mobile: 33vw;
 }
 
 .mitglieder-wrapper {
@@ -319,7 +321,7 @@
     }
 }
 
-@media screen and (max-width: 723px) {
+/* @media screen and (max-width: 723px) {
     .carousel__item img {
         width: calc(var(--width) * 2);
     }
@@ -349,7 +351,7 @@
         max-width: 70vh;
         transform: translateX(200px);
     }
-}
+} */
 
 
 /* @media screen and (max-width: 800px) {
@@ -357,3 +359,80 @@
         flex-basis: 15%;
     }
 } */
+
+
+@media screen and (max-width: 900px) {
+
+    .carousel__item img {
+        position: fixed;
+        width: calc(var(--width) * 2);
+        height: 100%;
+        left: 50%;
+        top: 50%;
+        transform: translate(-45%, -50%) scale(1);
+        z-index: -1;
+        object-fit: cover;
+        filter: saturate(0.3) contrast(0.75) brightness(1.1);
+    }
+
+    .img-Basti {
+        transform: translate(-40%, -52%) scale(1.45) !important;
+    }
+
+    .carousel__contents {
+        width: var(--width-mobile);
+        padding: calc(1rem + 1vw);
+    }
+
+    .carousel__list {
+        gap: 2vw;
+    }
+
+    .carousel__item {
+        flex-basis: calc(var(--width-mobile)/2);
+        margin: 0 5px;
+        border-radius: 8px;
+        font-size: 3vw;
+    }
+
+    .carousel__item:hover {
+        flex-basis: calc(var(--width-mobile)/1.6666);
+        margin: 0 5px;
+        border-radius: 8px;
+        font-size: 3vw;
+    }
+
+    .carousel__item[data-active] {
+        flex-basis: var(--width-mobile);
+        flex-grow: 0;
+    }
+
+    .carousel__item:nth-child(1),
+    .carousel__item:nth-child(5) {
+        flex: 0 0 0px;
+        margin: 0;
+        box-shadow: none;
+        opacity: 0 !important;
+    }
+
+    .carousel__contents,
+    .carousel__item,
+    .cardContainer,
+    .card,
+    .card:after,
+    .card .side {
+        height: var(--height-mobile);
+    }
+}
+
+@media (max-aspect-ratio: 5/4) {
+
+    .carousel__contents,
+    .carousel__item,
+    .cardContainer,
+    .card,
+    .card:after,
+    .card .side {
+        height: var(--height-mobile);
+    }
+}
