--- a/views/partials/members.ejs
+++ b/views/partials/members.ejs
@@ -1,170 +1,182 @@
-    <img src="images/logo-bw.png" class="mitglieder-bg">
-    <div class="mitglieder-wrapper">
-        <div>
-            <h1 class="vereinsname">Unsere Mitglieder</h1>
+<img src="images/logo-bw.png" class="mitglieder-bg">
+<div class="mitglieder-wrapper">
+    <div>
+        <h1 class="vereinsname">Unsere Mitglieder</h1>
+    </div>
+    <div>
+        <ul class="carousel__list">
+            <li class="carousel__item" tabindex="0">
+                <div class="cardContainer inactive">
+                    <div class="card">
+                        <div class="side front ">
+                            <div class="carousel__box">
+                                <img src="images/Lenz.jpg" width="480" height="720">
+                                <div class="carousel__contents">
+                                    <h2 class="mitglieder__name">Lorenz Schiegerl</h2>
+                                    <h3 class="mitglieder__titel">Kassenwart und Skatelegende</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="side back">
+                            <h2 class="mitglieder__name">Lorenz Schiegerl</h2>
+                            <h3 class="mitglieder__titel">Kassenwart und Skatelegende</h3>
+                            <p class="mitglieder__zitat">""</p>
+                            <p class="mitglieder__bio">
+                                Ob als Skatelegende oder als <span class="bold">Kassenwart</span>, das Motto
+                                bleibt: Immer alles (aus)geben!
+                            </p>
+                            <a href="/mitglieder/Lorenz">
+                                <div class="button">
+                                    mehr
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="carousel__item" tabindex="0">
+                <div class="cardContainer inactive">
+                    <div class="card">
+                        <div class="side front">
+                            <div class="carousel__box">
+                                <img src="images/Sevi.jpg" width="480" height="720">
+                                <div class="carousel__contents">
+                                    <h2 class="mitglieder__name">Severin Merget</h2>
+                                    <h3 class="mitglieder__titel">Minister für Sport und Coolness</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="side back">
+                            <h2 class="mitglieder__name">Severin Merget</h2>
+                            <h3 class="mitglieder__titel">Minister für Sport und Coolness</h3>
+                            <p class="mitglieder__zitat">"Jetzt!"</p>
+                            <p class="mitglieder__bio">
+                                Als Bergkatze unerreicht, an Coolness unübertroffen, als Freund einmalig und der
+                                einzige
+                                <span class="bold">Sportwart</span> den wir uns vorstellen können.
+                            </p>
+                            <a href="/mitglieder/Lorenz">
+                                <div class="button">
+                                    mehr
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="carousel__item" tabindex="0" data-active="true">
+                <div class="cardContainer inactive">
+                    <div class="card">
+                        <div class="side front">
+                            <div class="carousel__box">
+                                <div class="carousel__image"><img src="images/Manu.jpg" width="998" height="1000">
+                                </div>
+                                <div class="carousel__contents">
+                                    <h2 class="mitglieder__name">Manuel Rondelli</h2>
+                                    <h3 class="mitglieder__titel">Unser Präsident und Wellengott</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="side back">
+                            <h2 class="mitglieder__name">Manuel Rondelli</h2>
+                            <h3 class="mitglieder__titel">Unser Präsident und Wellengott</h3>
+                            <p class="mitglieder__zitat">"Leute ich les leer."</p>
+                            <p class="mitglieder__bio">
+                                Unser <span class="bold">Präsident</span>, unser Fels in der Brandung, weitgereist,
+                                weltgewandt, der einmaliger <a href="https://www.youtube.com/watch?v=9lmQidSrgPw"
+                                    target="_blank">Wellengott</a>
+                                persönlich und nicht zuletzt ein Weltklasse-Freund.
+                            </p>
+                            <a href="/mitglieder/Lorenz">
+                                <div class="button">
+                                    mehr
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="carousel__item" tabindex="0">
+                <div class="cardContainer inactive">
+                    <div class="card">
+                        <div class="side front">
+                            <div class="carousel__box">
+                                <div class="carousel__image">
+                                    <img class="img-Jakob" src="images/Jakob.jpg" width="480" height="720">
+                                </div>
+                                <div class="carousel__contents">
+                                    <h2 class="mitglieder__name">Jakob Timmermann</h2>
+                                    <h3 class="mitglieder__titel">Protokollant und Universalgenie</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="side back">
+                            <h2 class="mitglieder__name">Jakob Timmermann</h2>
+                            <h3 class="mitglieder__titel">Protokollant und Universalgenie</h3>
+                            <p class="mitglieder__zitat">"Der nasse Hase ist das geölte Kalb der Tiere."</p>
+                            <p class="mitglieder__bio">
+                                Keiner vereint Gegensätze so leichthändig wie unser <span
+                                    class="bold">Protokollant</span>
+                                und selbsternanntes Universalgenie.
+                                Und nur schwerlich findet man einen besseren Freund.
+                            </p>
+                            <a href="/mitglieder/Lorenz">
+                                <div class="button">
+                                    mehr
+                                </div>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="carousel__item" tabindex="0">
+                <div class="cardContainer inactive">
+                    <div class="card">
+                        <div class="side front">
+                            <div class="carousel__box">
+                                <div class="carousel__image">
+                                    <img class="img-Basti" src="images/Basti.jpg" width="480" height="720">
+                                </div>
+                                <div class="carousel__contents">
+                                    <h2 class="mitglieder__name">Sebastian Ghanbari</h2>
+                                    <h3 class="mitglieder__titel">Reserveposten und Tausendsassa</h3>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="side back">
+                            <h2 class="mitglieder__name">Sebastian Ghanbari</h2>
+                            <h3 class="mitglieder__titel">Reserveposten und Tausendsassa</h3>
+                            <p class="mitglieder__zitat">"I'm about to rippin it!"</p>
+                            <p class="mitglieder__bio">
+                                Unser <span class="bold">Reserveposten</span> ist nicht am Puls der Zeit, er ist der
+                                Puls
+                                der Zeit, das Salz in der Suppe, das Zentrum jeder Feierlichkeit, in jeder Hinsicht
+                                ein
+                                Taussendsassa und ein Freund für's Leben.
+                            </p>
+                            <a href="/mitglieder/Lorenz">
+                                <div class="button">
+                                    mehr
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </li>
+
+        </ul>
+    </div>
+    <div class="indicator-wrapper">
+        <div class="indicator-box Lenz left-indicator-box">
         </div>
-        <div>
-            <ul class="carousel__list">
-                <li class="carousel__item" tabindex="0">
-                    <div class="cardContainer inactive">
-                        <div class="card">
-                            <div class="side front ">
-                                <div class="carousel__box">
-                                    <img src="images/Lenz.jpg" width="480" height="720">
-                                    <div class="carousel__contents">
-                                        <h2 class="mitglieder__name">Lorenz Schiegerl</h2>
-                                        <h3 class="mitglieder__titel">Kassenwart und Skatelegende</h3>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="side back">
-                                <h2 class="mitglieder__name">Lorenz Schiegerl</h2>
-                                <h3 class="mitglieder__titel">Kassenwart und Skatelegende</h3>
-                                <p class="mitglieder__zitat">""</p>
-                                <p class="mitglieder__bio">
-                                    Ob als Skatelegende oder als <span class="bold">Kassenwart</span>, das Motto
-                                    bleibt: Immer alles (aus)geben!
-                                </p>
-                                <a href="/mitglieder/Lorenz">
-                                    <div class="button">
-                                        mehr
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="carousel__item" tabindex="0">
-                    <div class="cardContainer inactive">
-                        <div class="card">
-                            <div class="side front">
-                                <div class="carousel__box">
-                                    <img src="images/Sevi.jpg" width="480" height="720">
-                                    <div class="carousel__contents">
-                                        <h2 class="mitglieder__name">Severin Merget</h2>
-                                        <h3 class="mitglieder__titel">Minister für Sport und Coolness</h3>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="side back">
-                                <h2 class="mitglieder__name">Severin Merget</h2>
-                                <h3 class="mitglieder__titel">Minister für Sport und Coolness</h3>
-                                <p class="mitglieder__zitat">"Jetzt!"</p>
-                                <p class="mitglieder__bio">
-                                    Als Bergkatze unerreicht, an Coolness unübertroffen, als Freund einmalig und der
-                                    einzige
-                                    <span class="bold">Sportwart</span> den wir uns vorstellen können.
-                                </p>
-                                <a href="/mitglieder/Lorenz">
-                                    <div class="button">
-                                        mehr
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="carousel__item" tabindex="0" data-active="true">
-                    <div class="cardContainer inactive">
-                        <div class="card">
-                            <div class="side front">
-                                <div class="carousel__box">
-                                    <div class="carousel__image"><img src="images/Manu.jpg" width="998" height="1000">
-                                    </div>
-                                    <div class="carousel__contents">
-                                        <h2 class="mitglieder__name">Manuel Rondelli</h2>
-                                        <h3 class="mitglieder__titel">Unser Präsident und Wellengott</h3>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="side back">
-                                <h2 class="mitglieder__name">Manuel Rondelli</h2>
-                                <h3 class="mitglieder__titel">Unser Präsident und Wellengott</h3>
-                                <p class="mitglieder__zitat">"Leute ich les leer."</p>
-                                <p class="mitglieder__bio">
-                                    Unser <span class="bold">Präsident</span>, unser Fels in der Brandung, weitgereist,
-                                    weltgewandt, der einmaliger <a href="https://www.youtube.com/watch?v=9lmQidSrgPw"
-                                        target="_blank">Wellengott</a>
-                                    persönlich und nicht zuletzt ein Weltklasse-Freund.
-                                </p>
-                                <a href="/mitglieder/Lorenz">
-                                    <div class="button">
-                                        mehr
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="carousel__item" tabindex="0">
-                    <div class="cardContainer inactive">
-                        <div class="card">
-                            <div class="side front">
-                                <div class="carousel__box">
-                                    <div class="carousel__image">
-                                        <img class="img-Jakob" src="images/Jakob.jpg" width="480" height="720">
-                                    </div>
-                                    <div class="carousel__contents">
-                                        <h2 class="mitglieder__name">Jakob Timmermann</h2>
-                                        <h3 class="mitglieder__titel">Protokollant und Universalgenie</h3>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="side back">
-                                <h2 class="mitglieder__name">Jakob Timmermann</h2>
-                                <h3 class="mitglieder__titel">Protokollant und Universalgenie</h3>
-                                <p class="mitglieder__zitat">"Der nasse Hase ist das geölte Kalb der Tiere."</p>
-                                <p class="mitglieder__bio">
-                                    Keiner vereint Gegensätze so leichthändig wie unser <span
-                                        class="bold">Protokollant</span>
-                                    und selbsternanntes Universalgenie.
-                                    Und nur schwerlich findet man einen besseren Freund.
-                                </p>
-                                <a href="/mitglieder/Lorenz">
-                                    <div class="button">
-                                        mehr
-                                    </div>
-                                </a>
-
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="carousel__item" tabindex="0">
-                    <div class="cardContainer inactive">
-                        <div class="card">
-                            <div class="side front">
-                                <div class="carousel__box">
-                                    <div class="carousel__image">
-                                        <img class="img-Basti" src="images/Basti.jpg" width="480" height="720">
-                                    </div>
-                                    <div class="carousel__contents">
-                                        <h2 class="mitglieder__name">Sebastian Ghanbari</h2>
-                                        <h3 class="mitglieder__titel">Reserveposten und Tausendsassa</h3>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="side back">
-                                <h2 class="mitglieder__name">Sebastian Ghanbari</h2>
-                                <h3 class="mitglieder__titel">Reserveposten und Tausendsassa</h3>
-                                <p class="mitglieder__zitat">"I'm about to rippin it!"</p>
-                                <p class="mitglieder__bio">
-                                    Unser <span class="bold">Reserveposten</span> ist nicht am Puls der Zeit, er ist der
-                                    Puls
-                                    der Zeit, das Salz in der Suppe, das Zentrum jeder Feierlichkeit, in jeder Hinsicht
-                                    ein
-                                    Taussendsassa und ein Freund für's Leben.
-                                </p>
-                                <a href="/mitglieder/Lorenz">
-                                    <div class="button">
-                                        mehr
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-
-            </ul>
+        <div class="indicator-box Sevi">
+        </div>
+        <div class="indicator-box Manu" indicator-active="true">
+        </div>
+        <div class="indicator-box Jakob">
+        </div>
+        <div class="indicator-box Basti right-indicator-box">
         </div>
     </div>
+</div>
